--- a/web-api/Cargo.toml
+++ b/web-api/Cargo.toml
@@ -10,11 +10,9 @@ path = "src/main.rs"
 [dependencies]
 rpc = { path = "../rpc"}
 tonic = "0.9.1"
-actix-web = "4"
-actix-cors = "0.6.4"
-env_logger = "0.10.0"
-log = "0.4.17"
-dotenv = "0.15.0"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
+tower-http = { version = "0.4.1", features = ["cors"] }
+axum = { version = "0.6.18", features = ["headers"] }
+tokio = { version = "1.0", features = ["full"] }
 
