--- a/web-client/package.json
+++ b/web-client/package.json
@@ -14,7 +14,7 @@
     "@tsconfig/svelte": "^5.0.0",
     "svelte": "^4.0.1",
     "svelte-check": "^3.4.4",
-    "svelte-spa-router": "3.3.0",
+    "svelte-spa-router": "^3.3.0",
     "tslib": "^2.6.0",
     "typescript": "^5.1.6",
     "vite": "^4.3.9"
