--- a/web-client/package.json
+++ b/web-client/package.json
@@ -9,9 +9,13 @@
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
-  "dependencies": {
+  "devDependencies": {
+    "@smui-extra/autocomplete": "^7.0.0-beta.14",
+    "@smui/circular-progress": "^7.0.0-beta.14",
+    "@smui/list": "^7.0.0-beta.14",
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "@tsconfig/svelte": "^5.0.0",
+    "carbon-components-svelte": "^0.76.0",
     "svelte": "^4.0.1",
     "svelte-check": "^3.4.4",
     "svelte-spa-router": "^3.3.0",
