--- a/services/dictionary/Cargo.toml
+++ b/services/dictionary/Cargo.toml
@@ -8,7 +8,18 @@ name = "dictionary-ms"
 path = "src/main.rs"
 
 [dependencies]
+rpc = { path = "../../rpc" }
+
 tonic = "0.9.1"
 tonic-health = "0.9.1"
-rpc = { path = "../../rpc" }
 tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
+serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1.0.93"
+mongodb = { version = "2.5.0", features = ["bson-chrono-0_4"]}
+chrono = { version = "0.4.26", features = ["serde"] }
+reqwest = { version = "0.11.18", features = ["json", "rustls-tls", "native-tls", "gzip"] }
+scraper = "0.17.1"
+base64 = "0.21.2"
+fake-useragent = "0.1.3"
+url = "2.4.0"
+regex = "1.8.4"
