--- a/services/dictionary/Cargo.toml
+++ b/services/dictionary/Cargo.toml
@@ -19,7 +19,5 @@ mongodb = { version = "2.5.0", features = ["bson-chrono-0_4"]}
 chrono = { version = "0.4.26", features = ["serde"] }
 reqwest = { version = "0.11.18", features = ["json", "rustls-tls", "native-tls", "gzip"] }
 scraper = "0.17.1"
-base64 = "0.21.2"
-fake-useragent = "0.1.3"
-url = "2.4.0"
+fake_user_agent = "0.1.4"
 regex = "1.8.4"
