--- a/services/dictionary/Cargo.toml
+++ b/services/dictionary/Cargo.toml
@@ -18,6 +18,6 @@ serde_json = "1.0.93"
 mongodb = { version = "2.5.0", features = ["bson-chrono-0_4"]}
 chrono = { version = "0.4.26", features = ["serde"] }
 reqwest = { version = "0.11.18", features = ["json", "rustls-tls", "native-tls", "gzip"] }
-scraper = "0.17.1"
+scraper = { version = "0.17.1", features = ["atomic"]}
 fake_user_agent = "0.1.4"
 regex = "1.8.4"
