--- a/services/dictionary/Cargo.toml
+++ b/services/dictionary/Cargo.toml
@@ -13,6 +13,7 @@ rpc = { path = "../../rpc" }
 tonic = "0.9.1"
 tonic-health = "0.9.1"
 tokio = { version = "1.26.0", features = ["rt-multi-thread", "macros"] }
+futures = "0.3.28"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
 mongodb = { version = "2.5.0", features = ["bson-chrono-0_4"]}
