--- a/web-client/package.json
+++ b/web-client/package.json
@@ -21,6 +21,7 @@
     "svelte-spa-router": "^3.3.0",
     "tslib": "^2.6.0",
     "typescript": "^5.1.6",
+    "typescript-svelte-plugin": "^0.3.29",
     "vite": "^4.3.9"
   }
 }
