--- a/web-client/package.json
+++ b/web-client/package.json
@@ -7,7 +7,8 @@
     "dev": "npm i && vite --host 0.0.0.0 --port 80",
     "build": "vite build",
     "preview": "vite preview",
-    "check": "svelte-check --tsconfig ./tsconfig.json"
+    "check": "svelte-check --tsconfig ./tsconfig.json",
+    "format": "prettier --write  --plugin prettier-plugin-svelte ."
   },
   "devDependencies": {
     "@smui-extra/autocomplete": "^7.0.0-beta.14",
@@ -16,6 +17,8 @@
     "@sveltejs/vite-plugin-svelte": "^2.4.2",
     "@tsconfig/svelte": "^5.0.0",
     "carbon-components-svelte": "^0.76.0",
+    "prettier": "^3.0.0",
+    "prettier-plugin-svelte": "^3.0.0",
     "svelte": "^4.0.1",
     "svelte-check": "^3.4.4",
     "svelte-spa-router": "^3.3.0",
