--- a/services/dictionary/Cargo.toml
+++ b/services/dictionary/Cargo.toml
@@ -9,6 +9,7 @@ path = "src/main.rs"
 
 [dependencies]
 rpc = { path = "../../rpc" }
+common-rs = { path = "../../common-rs"}
 
 tonic = "0.9.1"
 tonic-health = "0.9.1"
