--- a/web-api/Cargo.toml
+++ b/web-api/Cargo.toml
@@ -9,6 +9,7 @@ path = "src/main.rs"
 
 [dependencies]
 rpc = { path = "../rpc"}
+common-rs = { path = "../common-rs"}
 tonic = "0.9.1"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
