--- a/services/search/Cargo.toml
+++ b/services/search/Cargo.toml
@@ -6,3 +6,5 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+meilisearch-sdk = "0.24.1"
+tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
