--- a/web-api/Cargo.toml
+++ b/web-api/Cargo.toml
@@ -15,5 +15,5 @@ serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.93"
 tower-http = { version = "0.4.1", features = ["cors"] }
 axum = { version = "0.6.18", features = ["headers"] }
-tokio = { version = "1.0", features = ["full"] }
+tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
 
