added .gitkeep files for smoother docker running on fresh install

--- a/dockerise/docker-compose.local.yml
+++ b/dockerise/docker-compose.local.yml
@@ -75,5 +75,9 @@ services:
     entrypoint: ["cargo", "watch", "-x", "'run'"]
     environment:
       MEILISEARCH_CONNECTION_URI: http://meilisearch:7700
+      MEILI_MASTER_KEY: 'mySuperSecretKey'
 
+  meilisearch:
+    environment:
+      MEILI_MASTER_KEY: 'mySuperSecretKey'
 
