--- a/services/search/Cargo.toml
+++ b/services/search/Cargo.toml
@@ -11,3 +11,4 @@ common-rs = { path = "../../common-rs"}
 meilisearch-sdk = "0.24.1"
 tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
 serde = { version = "1.0.175", features = ["derive"] }
+serde_json = "1.0.103"
